--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,13 +50,12 @@
                 android:background="@drawable/ic_baseline_zoom_in_24" />
         </LinearLayout>
 
-        <com.cosmintaran.survcalculator.Map.opengl.Map
-            android:id="@+id/map"
+       <com.cosmintaran.survcalculator.MapControl.view.MapSurfaceView
+            android:id="@+id/mapView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_alignParentTop="true"
             />
-
 
     </LinearLayout>
 </RelativeLayout>
