--- a/app/src/main/res/drawable/ic_twotone_zoom_out_map_24.xml
+++ b/app/src/main/res/drawable/ic_twotone_zoom_out_map_24.xml
@@ -6,5 +6,5 @@
     android:tint="?attr/colorControlNormal">
   <path
       android:fillColor="@android:color/white"
-      android:pathData="M6,19c0,1.1 0.9,2 2,2h8c1.1,0 2,-0.9 2,-2L18,7L6,7v12zM8.46,11.88l1.41,-1.41L12,12.59l2.12,-2.12 1.41,1.41L13.41,14l2.12,2.12 -1.41,1.41L12,15.41l-2.12,2.12 -1.41,-1.41L10.59,14l-2.13,-2.12zM15.5,4l-1,-1h-5l-1,1L5,4v2h14L19,4z"/>
+      android:pathData="M17.3,5.3l-2.89,2.87 1.42,1.42L18.7,6.7 21,9L21,3h-6zM9,3L3,3v6l2.3,-2.3 2.87,2.89 1.42,-1.42L6.7,5.3zM8.17,14.41L5.3,17.3 3,15v6h6l-2.3,-2.3 2.89,-2.87zM15.83,14.41l-1.42,1.42 2.89,2.87L15,21h6v-6l-2.3,2.3z"/>
 </vector>
